update: results chapter by adding more plots and the label section. update the final conclusion

--- a/tex/sections/conclusion.tex
+++ b/tex/sections/conclusion.tex
@@ -1,11 +1,23 @@
 ﻿\chapter{Conclusion and General Discussion}
+\label{chap:conclusion}
+
+\section{Conclusion}
 \label{sec:conclusion}
 
+In this thesis we looked at the research question from a few different sides. The raw pairwise correlations, the model to predict whether a given trial would be solved correctly, then the models that describe the likelihoods of gaze points given that a trial was solved correctly and the distributions of features based on the labels. All of them suggest a similar picture. 
 
+Although participants seem to grasp the problem in a similar way, their answers still differ quite a lot. We saw this from the the fact that the Distractor did not turn out to be associated with accuracy, even though it is a very important piece of information for the Complex trials. So participants fail the trials not because they miss an important piece of information as we hypothesized in \autoref{sec:rsa}, where we showed that not looking at the Distractor would make the Complex condition unsolvable. 
 
+Now to match this to the multiple findings that the proportional time on availablem messages is positively associated with accuracy, we will make the following assumption. Participants looking more at the bank of available messages might indicate indicate the general process of reasoning.
 
 \section{General Discussion}
 \label{sec:general-discussion}
+
+\subsection{Scanpaths}
+
+\subsection{why eye gaze does not represent good}
+
+\subsection{toggling}
 
 \subsection{Proportional Eye Tracking Features}
 \label{sec:general-discussion:proportional-eye-tracking-features}
