update: results and general discussion sections, add full plot with pariwise correlations to the appendix a

--- a/tex/sections/appendixA.tex
+++ b/tex/sections/appendixA.tex
@@ -24,3 +24,9 @@ AnswerAccuracy & 0.99 & 0.05 & --- & --- \\ \hline
 
 The table above shows the pairwise correlation between the features, accuracy, and mean answer time in the Unambiguous trials. There were no significant correlations between the features and accuracy. The only significant correlations were in the Mean Answer Time column, the results are not surprising as the Unambiguous trials are not difficult to solve, and most of the participants adopted a similar strategy where they would just match the sent message with the only object that has the same feature. This strategy involves only looking at sent message and the Target, making any deviations indicate that the participant is not following the strategy and they will take longer on the trial. It is worth to mention, that while the strategy is very efficient, a deviation from it does not make one answer incorrectly as can be seen from the results.
 
+\begin{figure}
+    \centering
+    \includegraphics[width=0.95\textwidth]{images/pairwise_corr.png}
+    \caption{Full pairwise correlation matrix for all conditions and features. The diagonal shows the distribution of the features. The top right triangle shows the scatter plots along with the regression lines. The bottom left triangle shows the correlation coefficients. Significance levels: * $p < 0.05$, ** $p < 0.01$, *** $p < 0.001$.}
+    \label{fig:pairwise_corr_full}
+\end{figure}
