--- a/tex/sections/conclusion.tex
+++ b/tex/sections/conclusion.tex
@@ -8,16 +8,25 @@ In this thesis we looked at the research question from a few different sides. Th
 
 Although participants seem to grasp the problem in a similar way, their answers still differ quite a lot. We saw this from the the fact that the Distractor did not turn out to be associated with accuracy, even though it is a very important piece of information for the Complex trials. So participants fail the trials not because they miss an important piece of information as we hypothesized in \autoref{sec:rsa}, where we showed that not looking at the Distractor would make the Complex condition unsolvable. 
 
-Now to match this to the multiple findings that the proportional time on availablem messages is positively associated with accuracy, we will make the following assumption. Participants looking more at the bank of available messages might indicate indicate the general process of reasoning.
+Now to match this to the multiple findings that the proportional time on available messages is positively associated with accuracy, we will make the following assumption. Participants looking more at the bank of available messages might indicate not just scanning the available messages, but also matching them with the objects, which can be seen as the reasoning process for reference games. Therefore, increase in proportional time on available messages might indicate that the participants are (recursively) reasoning about the objects and the messages. And a deeper reasoning process would lead to a higher chance of solving the trial correctly. Hence, a small increase in the proportional time on available messages would be enough to conclude a deeper reasoning process.
+
+
 
 \section{General Discussion}
 \label{sec:general-discussion}
 
 \subsection{Scanpaths}
+\label{sec:general-discussion:scanpaths}
+In this study we did not take into account the order of the gaze points at all. However, the scanpath by itself includes this information. We were unable to come up with a good strategy how one could encode the scanpath in a way that would be useful and feasible for the analysis. The scanpaths are not fixed length, posing a problem that every entry would be of a different length which would make it impossible to use them in a model. One idea could be to use RNNs to analyse the scanpaths, however, this would require a lot of data and a lot of tuning. We did a few attempts in training CNNs on the generated plots of the scanpaths, however, the results were not promising and due to low interpretability of the model and time constraints we decided to focus on the more traditional features.
 
-\subsection{why eye gaze does not represent good}
+\subsection{Peripheral Vision}
+\label{sec:general-discussion:attention-and-eye-tracking}
+It is possible that the participants used their peripheral vision to look at the objects. If one specifically tries to solve the trial without moving the eyes, one could still do it. This definitely poses a problem for the eye tracking data, as it would be impossible to detect this kind of behavior. We do not have any evidence that this is the case, but it is a possibility. People would not specifically try to solve the trials without the eye movements, however, it is quite probable that they capture some features such as color of the Distractor in case that the sent message is a shape during the trial. This is somewhat supported by the likelihood model predicting whether a gaze point would end up on the Distractor or not \autoref{sec:distractor_model}. \texttt{MsgType} had a very low but significant coefficient indicating exactly this behavior. Although this is not a strong evidence for the peripheral vision, the potential problem should be taken into account.
 
-\subsection{toggling}
+
+\subsection{Toggling}
+\label{sec:general-discussion:toggling}
+We only implemented features that describe proportional time spent on the area of interest. However, as we described in the \autoref{sec:conclusion}, an increase in proportional time on available messages might indicate a deeper reasoning process. One could also think about defining a feature to describe the toggling between the available messages and other areas of interest. Similarly to how it was done in \cite{Vigneau_2006}. The toggling might be an important predictor for accuracy if one makes repeated matches of the messages and the objects. 
 
 \subsection{Proportional Eye Tracking Features}
 \label{sec:general-discussion:proportional-eye-tracking-features}
